--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@react-navigation/stack": "^6.0.11",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
+    "radio-buttons-react-native": "^1.0.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "^0.64.3",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-modal-datetime-picker": "^13.0.0",
+    "react-native-modal-selector": "^2.1.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-web": "0.17.1"
